--- a/prototype/index.html
+++ b/prototype/index.html
@@ -7,40 +7,49 @@
 <head>
   <meta charset="utf-8">
 
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>ToureNPlaner</title>
+  <meta name="description" content="Routing prototype">
+  <meta name="author" content="ToureNPlaner Team">
 
-  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
   <!-- CSS: implied media="all" -->
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- More ideas for your <head> here: h5bp.com/docs/#head-Tips -->
-
-  <!-- All JavaScript at the bottom, except for Modernizr and Respond.
-       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
+  <!-- All JavaScript at the bottom, except for Modernizr. Modernizr enables HTML5 elements & feature detects.
        For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.0.min.js"></script>
-  <script src="js/libs/respond.min.js"></script>
 </head>
 
 <body>
 
   <div id="container">
     <header>
+	  <span class="login">
+		<a href="#">Login</a>
+	  </span>
 
-    </header>
+	  <span class="settings-icon">
+		<a href="#"><img src="img/cog.png" alt="Settings" /></a>
+	  </span>
+
+	  <div class="settings">
+		<p>This is just some text for now</p>
+	  </div>
+	</header>
+
     <div id="main" role="main">
-
+	  <div id="map"></div>
+	  <div id="sidebar">
+		<p>The sidebar goes here.</p>
+	  </div>
+	  <div id="data">
+		<p>All your data are belong to me.</p>
+	  </div>
     </div>
+
     <footer>
 
     </footer>
@@ -59,22 +68,12 @@
   <script src="js/script.js"></script>
   <!-- end scripts-->
 
-	
-  <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
-  <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
-
-
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7 ]>
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
     <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
   <![endif]-->
-  
+
 </body>
 </html>
