Fix settings icon dropdown

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -31,7 +31,7 @@
 		<a href="#">Login</a>
 	  </span>
 
-	  <span class="settings-icon">
+	  <span class="settings-icon settings-icon-no-overlay">
 		<a href="#"><img src="img/cog.png" alt="Settings" /></a>
 	  </span>
 
