--- a/prototype/index.html
+++ b/prototype/index.html
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS: implied media="all" -->
+  <link rel="stylesheet" href="css/smoothness/jquery-ui-1.8.14.custom.css">
   <link rel="stylesheet" href="css/style.css">
 
   <!-- All JavaScript at the bottom, except for Modernizr. Modernizr enables HTML5 elements & feature detects.
@@ -61,6 +62,9 @@
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+  
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js"></script>
+  <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.14.custom.min.js"><\/script>')</script>
 
 
   <!-- scripts concatenated and minified via ant build script-->
