Resizable and minimizable data box

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -47,7 +47,17 @@
 		<p>The sidebar goes here.</p>
 	  </div>
 	  <div id="data">
+	      <span class="minimize">
+		<a href="#">_</a>
+	      </span>
+
+	      <span class="maximize">
+		<a href="#">Daten</a>
+	      </span>
+	      
+	      <div id="content">
 		<p>All your data are belong to me.</p>
+	      </div>
 	  </div>
     </div>
 
