Fix minimizing the resizable data div

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -47,12 +47,8 @@
 		<p>The sidebar goes here.</p>
 	  </div>
 	  <div id="data">
-	      <span class="minimize">
+	      <span id="minmax">
 		<a href="#">_</a>
-	      </span>
-
-	      <span class="maximize">
-		<a href="#">Daten</a>
 	      </span>
 	      
 	      <div id="content">
