Add login dialog and base64_encode function
The login dialog just saves the data in the user variable and does very
simple validation.

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -25,6 +25,18 @@
 </head>
 
 <body>
+  
+  <div id="login" title="Login">
+    <p class="validate">Please fill out all fields.</p>
+    
+    <form name="login">
+      <label for="username">Username:</label><br />
+      <input type="text" name="username" id="username" class="ui-widget-content ui-corner-all" /><br />
+      
+      <label for="password">Password:</label><br />
+      <input type="password" name="password" id="password" class="ui-widget-content ui-corner-all" /><br /><br />
+    </form>
+  </div>
 
   <div id="container">
     <header>
