--- a/prototype/index.html
+++ b/prototype/index.html
@@ -18,6 +18,7 @@
   <!-- CSS: implied media="all" -->
   <link rel="stylesheet" href="css/smoothness/jquery-ui-1.8.14.custom.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/jquery.contextMenu.css">
 
   <!-- All JavaScript at the bottom, except for Modernizr. Modernizr enables HTML5 elements & feature detects.
        For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
@@ -84,6 +85,10 @@
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js"></script>
   <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.14.custom.min.js"><\/script>')</script>
 
+  <!-- jQuery Plugin for Contextmenu -->
+  <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+  <script src="js/libs/jquery.contextMenu.js"></script>  
+  <script src="js/libs/mapClass.js"></script>
 
   <!-- scripts concatenated and minified via ant build script-->
   <script src="js/plugins.js"></script>
