Small style improvements

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -52,21 +52,21 @@
 	  <div class="settings">
 		<p>This is just some text for now</p>
 	  </div>
-	</header>
+    </header>
 
     <div id="main" role="main">
 	  <div id="map"></div>
 	  <div id="sidebar">
-		<p>The sidebar goes here.</p>
+		<h1>ToureNPlaner</h1>
 		<form name="route">
       		   <label for="start">Start:</label><br />
       		   <input type="text" name="start" id="start" class="ui-widget-content ui-corner-all" /><br />
       
-      		   <label for="target">Target:</label><br />
+      		   <label for="target">Ziel:</label><br />
       		   <input type="text" name="target" id="target" class="ui-widget-content ui-corner-all" /><br /><br />
-    		</form>
 
-		<button>Get Route</button>
+        	    <button>Get Route</button>
+    		</form>
 	  </div>
 	  <div id="data">
 	      <span id="minmax">
