Add a first model and view and add a good looking topbar (borrowed from twitter bootstrap)

--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,30 @@
   
 
   <div id="container">
-    <header>
-
+    <header class="topbar">
+      <div class="fill">
+        <div class="container">
+          <h3><a href="#">ToureNPlaner</a></h3>
+          <ul class="nav secondary-nav">
+            <li class="login-link"><a href="#/login">Login</a></li>
+            <li class="register-link"><a href="#/register">Register</a></li>
+            <li class="user"></li>
+            <li class="menu">
+              <a class="menu" href="#">Settings</a>
+              <ul class="menu-dropdown">
+                <li><a href="#/settings">Usersettings</a></li>
+                <li><a href="#/billing">Billing</a></li>
+                <li class="divider"></li>
+                <li><a href="#/logout">Logout</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
+    
     <div id="main" role="main">
-      <a href="#/login">Login</a>
+      <p>Content missing</p>
     </div>
     <footer>
 
