Fix login when returning to the page

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
           <ul class="nav secondary-nav">
             <li class="login-link"><a href="#/login">Login</a></li>
             <li class="register-link"><a href="#/register">Register</a></li>
-            <li class="user"></li>
+            <li class="user"><a href="#" onclick="return false;"></a></li>
             <li class="menu">
               <a class="menu" href="#">Settings</a>
               <ul class="menu-dropdown">
