Add Mockjax and a first mocked function for API testing on the client side

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -10,11 +10,20 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js"></script>
+  <script>jQuery.ui || document.write('<script src="../js/libs/jquery-ui-1.8.14.custom.min.js"><\/script>')</script>
+  <script src="../js/libs/underscore.js"></script>
+  <script src="../js/libs/backbone.js"></script>
   <script src="../js/plugins.js"></script>
+  <script src="../js/mylibs/api.js"></script>
+  <script src="../js/mylibs/models.js"></script>
+  <script src="../js/mylibs/views.js"></script>
+  <script src="../js/mylibs/router.js"></script>
   <script src="../js/script.js"></script>
-
 <!-- test runner files -->
   <script src="qunit/qunit.js"></script>
+  <script src="qunit/jquery.mockjax.js"></script>
+  <script src="mockapi.js"></script>
   <script src="tests.js"></script>
 
 
