Add some nice shadows (except on Opera) and make the sidebar resizable

--- a/src/index.html
+++ b/src/index.html
@@ -71,11 +71,11 @@
 
     <div id="main" role="main">
       <div id="sidebar">
-        <p>Content missing</p>
+        <p style="padding: 5px 10px;">Content missing</p>
       </div>
 
       <div id="map">
-        <p style="color: white;">Map missing</p>
+        <p style="color: white; padding: 5px 10px;">Map missing</p>
       </div>
     </div>
 
