Rename View classes so they end with a View suffix and add the data box

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,16 @@
       <div id="map">
         <p style="color: white; padding: 5px 10px;">Map missing</p>
       </div>
+
+      <div id="data">
+        <span class="minmax">
+          <a href="#">_</a>
+        </span>
+        
+        <div class="content">
+          <p style="padding: 5px 10px">Data missing</p>
+        </div>
+      </div>
     </div>
 
     <footer>
