--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 
   <link rel="stylesheet" href="css/smoothness/jquery-ui-1.8.14.custom.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/jquery.contextMenu.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
@@ -74,9 +75,7 @@
         <p style="padding: 5px 10px;">Content missing</p>
       </div>
 
-      <div id="map">
-        <p style="color: white; padding: 5px 10px;">Map missing</p>
-      </div>
+      <div id="map"><p></p></div>
 
       <div id="data">
         <span class="minmax">
@@ -104,15 +103,21 @@
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js"></script>
   <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.14.custom.min.js"><\/script>')</script>
 
+  <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+  
+
   <!-- scripts concatenated and minified via build script -->
-  <script defer src="js/libs/underscore.js"></script>
-  <script defer src="js/libs/backbone.js"></script>
-  <script defer src="js/plugins.js"></script>
-  <script defer src="js/mylibs/models.js"></script>
-  <script defer src="js/mylibs/views.js"></script>
-  <script defer src="js/mylibs/router.js"></script>
-  <script defer src="js/script.js"></script>
+  <script src="js/libs/underscore.js"></script>
+  <script src="js/libs/backbone.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/mylibs/map.js"></script>  
+  <script src="js/mylibs/models.js"></script>
+  <script src="js/mylibs/views.js"></script>
+  <script src="js/mylibs/router.js"></script>
+  <script src="js/script.js"></script>
   <!-- end scripts -->
+
+
 
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
