Bug mit dem leerem div behoben.

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
         <p style="padding: 5px 10px;">Content missing</p>
       </div>
 
-      <div id="map"><p></p></div>
+      <div id="map"></div>
 
       <div id="data">
         <span class="minmax">
