Verbesserungen: Kontextmenu ausgelagert, Code an Styleguide angepasst

--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,7 @@
   <script src="js/mylibs/models.js"></script>
   <script src="js/mylibs/views.js"></script>
   <script src="js/mylibs/router.js"></script>
+  <script src="js/mylibs/map.contextmenu.js"></script>
   <script src="js/script.js"></script>
   <!-- end scripts -->
 
