--- a/src/test/index.html
+++ b/src/test/index.html
@@ -26,7 +26,7 @@
 
 </head>
 <body class="flora">
-  <h1 id="qunit-header">QUnit Test Suite</h1>
+  <h1 id="qunit-header">ToureNPlaner Webclient Test Suite</h1>
   <h2 id="qunit-banner"></h2>
   <div id="qunit-testrunner-toolbar"></div>
   <h2 id="qunit-userAgent"></h2>
