Login now uses the api and the site as a whole uses the mockapi for easier testing

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
         <span class="minmax">
           <a href="#">_</a>
         </span>
-        
+
         <div class="content">
           <p style="padding: 5px 10px">Data missing</p>
         </div>
@@ -104,13 +104,18 @@
   <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.14.custom.min.js"><\/script>')</script>
 
   <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-  
+
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/libs/underscore.js"></script>
   <script src="js/libs/backbone.js"></script>
+
+  <script src="test/qunit/jquery.mockjax.js"></script>
+  <script src="test/mockapi.js"></script>
+
   <script src="js/plugins.js"></script>
-  <script src="js/mylibs/map.js"></script>  
+  <script src="js/mylibs/api.js"></script>
+  <script src="js/mylibs/map.js"></script>
   <script src="js/mylibs/models.js"></script>
   <script src="js/mylibs/views.js"></script>
   <script src="js/mylibs/router.js"></script>
