--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       <div class="fill">
         <div class="container">
           <h3><a href="#">ToureNPlaner</a></h3>
-          <ul class="nav secondary-nav">
+          <ul class="nav secondary-nav private-server">
             <li class="login-link"><a href="#/login">Login</a></li>
             <li class="register-link"><a href="#/register">Register</a></li>
             <li class="user"><a href="#" onclick="return false;"></a></li>
@@ -70,7 +70,7 @@
         </span>
 
         <div class="content">
-          <p style="padding: 5px 10px">Data missing</p>
+          <p style="padding: 5px 10px">No point selected!</p>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
         <p><strong>Error!</strong> The username or password you entered was incorrect.</p>
       </div>
 
-      <form name="login" method="post">
+      <form name="login" method="post" action="#/login">
         <div class="clearfix">
           <label for="email">Email:</label>
           <div class="input">
@@ -112,7 +112,7 @@
     </div>
     <div class="modal-footer">
       <a href="#" class="btn secondary cancel">Cancel</a>
-      <a href="#" class="btn primary login">Login</a>
+      <a href="#/login" class="btn primary login">Login</a>
     </div>
   </div>
 
@@ -130,7 +130,7 @@
         <p><strong>Error!</strong> There were errors in the form.</p>
       </div>
 
-      <form name="register" method="post">
+      <form name="register" method="post" action="#/register">
         <div class="clearfix">
           <label for="firstname">First name: </label>
           <div class="input">
@@ -176,7 +176,31 @@
     </div>
     <div class="modal-footer">
       <a href="#" class="btn secondary cancel">Cancel</a>
-      <a href="#" class="btn primary register">Register</a>
+      <a href="#/register" class="btn primary register">Register</a>
+    </div>
+  </div>
+  
+  <div id="message" class="modal">
+    <div class="modal-header">
+      <a href="#" class="close">x</a>
+      <h3 class="title">Title</h3>
+    </div>
+    
+    <div class="modal-body">
+      <div class="message">
+        Message
+      </div>
+    </div>
+    
+    <div class="modal-footer">
+      <a href="#" class="btn primary cancel">Okay</a>
+    </div>
+  </div>
+  
+  <div id="loading" class="modal">
+    <div class="body">
+      <div class="loading"><img src="img/loading.gif" alt="Loading" title="Loading" /></div>
+      <div class="message">Loading server informations</div>
     </div>
   </div>
 
