solved issue #44, #43 and #42

--- a/src/index.html
+++ b/src/index.html
@@ -222,8 +222,8 @@
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script> -->
   <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.16.custom.min.js"><\/script>')</script>
 
-  <!--<script src="http://www.openlayers.org/api/OpenLayers.js"></script>-->
-  <script src="js/libs/OpenLayers.js"></script>
+  <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+  
 
 
   <!-- scripts concatenated and minified via build script -->
@@ -238,8 +238,6 @@
   <script src="js/mylibs/api.js"></script>
   <script src="js/mylibs/map.js"></script>
   <script src="js/mylibs/map.contextmenu.js"></script>
-  <script src="js/mylibs/map.marklist.js"></script>
-  <script src="js/mylibs/map.mark.js"></script>
   <script src="js/mylibs/models.js"></script>
   <script src="js/mylibs/views.js"></script>
   <script src="js/mylibs/router.js"></script>
