Display error message if no algorithm is selected

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
           <form name="route">
             <label for="algorithms"><h3>Algorithms:</h3></label>
             <select name="algorithms" id="algorithms">
-              <option value="-1">No algorithms</option>
+              <option value="">No algorithms</option>
             </select>
 
             <hr style="border-bottom: 1px solid #CCC" />
