--- a/src/index.html
+++ b/src/index.html
@@ -234,6 +234,7 @@
   <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.16.custom.min.js"><\/script>')</script>
 
   <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+  <script>window.OpenLayers || document.write('<script src="js/libs/OpenLayers.js"><\/script>')</script>
 
 
 
