--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-
   <!-- Use the .htaccess and remove these lines to avoid edge case issues.
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -69,15 +68,13 @@
             <hr style="border-bottom: 1px solid #CCC" />
 
             <h3>Points:</h3>
+            
+            <div id="marks">
+              No points defined!
+            </div>
 
-            <label for="start">Start:</label><br />
-            <input type="text" name="start" id="start" /><br />
-
-            <label for="target">Ziel:</label><br />
-            <input type="text" name="target" id="target" /><br /><br />
-
-            <a href="#" id="btnSend" class="btn primary">Berechnen</a>
-            <a href="#" id="btnClear" class="btn secondary">Leeren</a>
+            <a href="#" id="btnSend" class="btn primary">Calculate Route</a>
+            <a href="#" id="btnClear" class="btn secondary">Clear</a>
           </form>
         </div>
       </div>
