use offline copy of openlayers and set path to openlayer control imgs

--- a/src/index.html
+++ b/src/index.html
@@ -244,8 +244,8 @@
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script> -->
   <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.16.custom.min.js"><\/script>')</script>
 
-  <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-  <script>window.OpenLayers || document.write('<script src="js/libs/OpenLayers.js"><\/script>')</script>
+  <script src="js/libs/OpenLayers.js"></script>
+  <!--<script>window.OpenLayers || document.write('<script src="js/libs/OpenLayers.js"><\/script>')</script>-->
 
 
 
