Add i18n.js file to load the correct translation file

--- a/src/index.html
+++ b/src/index.html
@@ -68,15 +68,15 @@
             </div>
 
             <div style="border-bottom: 1px solid #CCC; padding: 5px 0;"></div>
-            
+
             <div class="container">
               <h3>Points:</h3>
-  
+
               <div id="marks">
                 No points defined!
               </div>
             </div>
-            
+
             <div class="container">
               <a href="#" id="btnSend" class="btn primary">Calculate Route</a>
               <a href="#" id="btnClear" class="btn secondary">Clear</a>
@@ -246,10 +246,13 @@
   <script src="js/libs/backbone.js"></script>
   <script src="js/libs/jquery.validate.min.js"></script>
 
+  <!-- Only include if a mock api is needed -->
   <script src="test/qunit/jquery.mockjax.js"></script>
   <script src="test/mockapi.js"></script>
+  <!-- End of mockapi -->
 
   <script src="js/plugins.js"></script>
+  <script src="js/mylibs/i18n.js"></script>
   <script src="js/mylibs/api.js"></script>
   <script src="js/mylibs/map.js"></script>
   <script src="js/mylibs/map.contextmenu.js"></script>
