Move templates into their own file

--- a/src/index.html
+++ b/src/index.html
@@ -227,6 +227,7 @@
 
   <script src="js/plugins.js"></script>
   <script src="js/mylibs/i18n.js"></script>
+  <script src="js/mylibs/templates.js"></script>
   <script src="js/mylibs/api.js"></script>
   <script src="js/mylibs/map.js"></script>
   <script src="js/mylibs/map.contextmenu.js"></script>
