Clear nearly all html in body of index.html
All content is now generated from templates. This change requires
some more testing.

--- a/src/index.html
+++ b/src/index.html
@@ -33,75 +33,7 @@
 </head>
 
 <body>
-  <div id="container">
-    <header class="topbar">
-      <div class="fill">
-        <div class="container">
-          <h3><a href="#">ToureNPlaner</a></h3>
-          <ul class="nav secondary-nav private-server">
-            <li class="login-link"><a href="#/login">Login</a></li>
-            <li class="register-link"><a href="#/register">Register</a></li>
-            <li class="user"><a href="#" onclick="return false;"></a></li>
-            <li class="menu">
-              <a class="menu" href="#">Settings</a>
-              <ul class="menu-dropdown">
-                <li><a href="#/settings">Usersettings</a></li>
-                <li><a href="#/billing">Billing</a></li>
-                <li class="divider"></li>
-                <li><a href="#/logout">Logout</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-
-    <div id="main" role="main">
-      <div id="sidebar">
-        <div style="padding: 5px 0px;">
-          <form name="route">
-            <div class="container">
-              <h3>Algorithms:</h3>
-              <select name="algorithms" id="algorithms">
-                <option value="">No algorithms</option>
-              </select>
-            </div>
-
-            <div style="border-bottom: 1px solid #CCC; padding: 5px 0;"></div>
-
-            <div class="container">
-              <h3>Points:</h3>
-
-              <div id="marks">
-                No points defined!
-              </div>
-            </div>
-
-            <div class="container">
-              <a href="#" id="btnSend" class="btn primary">Calculate Route</a>
-              <a href="#" id="btnClear" class="btn secondary">Clear</a>
-            </div>
-          </form>
-        </div>
-      </div>
-
-      <div id="map"></div>
-
-      <div id="data">
-        <span class="minmax">
-          <a href="#">_</a>
-        </span>
-
-        <div class="content" id="dataview">
-          <p style="padding: 5px 10px">No point selected!</p>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-
-    </footer>
-  </div> <!--! end of #container -->
+  <div id="container"></div>
 
   <!-- JavaScript at the bottom for fast page loading -->
 
