Add handlebars.js for better template handling
See https://github.com/wycats/handlebars.js for more informations

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
   <script src="js/libs/underscore.js"></script>
   <script src="js/libs/backbone.js"></script>
   <script src="js/libs/jquery.validate.min.js"></script>
+  <script src="js/libs/handlebars-1.0.0.beta.4.js"></script>
 
   <!-- Only include if a mock api is needed -->
   <script src="test/qunit/jquery.mockjax.js"></script>
