numspin and checkboxes added for constraints

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" href="css/jquery-ui-1.8.16.custom.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/jquery.contextMenu.css">
+  <link rel="stylesheet" href="css/smartspinner.css">
+
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
