--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
-  <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script> -->
-  <script>jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.16.custom.min.js"><\/script>')</script>
-
-  <script src="js/libs/OpenLayers.js"></script>
-  <!--<script>window.OpenLayers || document.write('<script src="js/libs/OpenLayers.js"><\/script>')</script>-->
-
   <!-- scripts concatenated and minified via build script -->
+  <script src="js/libs/jquery-ui-1.8.16.custom.min.js"></script>
+  <script src="js/libs/OpenLayers.js"></script>
   <script src="js/libs/underscore.js"></script>
   <script src="js/libs/backbone.js"></script>
   <script src="js/libs/jquery.validate.min.js"></script>
