--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,11 @@
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
-  <link rel="stylesheet" href="css/jquery-ui-1.8.16.custom.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/jquery.contextMenu.css">
-  <link rel="stylesheet" href="css/smartspinner.css">
-
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
-  <!-- All JavaScript at the bottom, except this Modernizr build incl. Respond.js
-       Respond is a polyfill for min/max-width media queries. Modernizr enables HTML5 elements & feature detects;
-       for optimal performance, create your own custom Modernizr build: www.modernizr.com/download/ -->
+  <!-- All JavaScript at the bottom, except this Modernizr build -->
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
 </head>
 
@@ -43,7 +35,6 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
-  <!-- scripts concatenated and minified via build script -->
   <script src="js/libs/jquery-ui-1.8.16.custom.min.js"></script>
   <script src="js/libs/OpenLayers.js"></script>
   <script src="js/libs/underscore.js"></script>
@@ -52,11 +43,7 @@
   <script src="js/libs/jquery.tablesorter.min.js"></script>
   <script src="js/libs/handlebars-1.0.0.beta.4.js"></script>
 
-  <!-- Only include if a mock api is needed -->
-  <script src="test/qunit/jquery.mockjax.js"></script>
-  <script src="test/mockapi.js"></script>
-  <!-- End of mockapi -->
-
+  <!-- scripts concatenated and minified via build script -->
   <script src="js/plugins.js"></script>
   <script src="js/mylibs/i18n.js"></script>
   <script src="js/mylibs/templates.js"></script>
