Readd mockapi to index.html (seems to be ignored by build script) and add api switch to script.js
When loading the webpage on a local server/through file:// the mockapi will be used. This will NOT work after building the project!

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
   <script src="js/libs/handlebars-1.0.0.beta.4.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
+  <script src="test/qunit/jquery.mockjax.js"></script>
+  <script src="test/mockapi.js"></script>
+  
   <script src="js/plugins.js"></script>
   <script src="js/mylibs/i18n.js"></script>
   <script src="js/mylibs/templates.js"></script>
