Improve tests and fix a critical bug in mockjax which would block any different requests sent after the first one

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -8,10 +8,8 @@
 
   <script src="../js/libs/modernizr-2.0.6.min.js"></script>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js"></script>
-  <script>jQuery.ui || document.write('<script src="../js/libs/jquery-ui-1.8.14.custom.min.js"><\/script>')</script>
+  <script src="../js/libs/jquery-1.7.1.min.js"></script>  
+  <script src="../js/libs/jquery-ui-1.8.16.custom.min.js"></script>
   <script src="../js/libs/underscore.js"></script>
   <script src="../js/libs/backbone.js"></script>
   <script src="../js/plugins.js"></script>
