--- a/src/test/index.html
+++ b/src/test/index.html
@@ -14,6 +14,7 @@
   <script src="../js/libs/backbone.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/mylibs/api.js"></script>
+  <script src="../js/mylibs/nominatim.js"></script>
 
 <!-- test runner files -->
   <script src="qunit/qunit.js"></script>
