Add <noscript> text for users with disabled javascript (closes #89)

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
 <body>
   <div id="container"></div>
 
+  <noscript>This site requires Javascript to function. If you disabled Javascript or use Noscript, please enable it and refresh this page.</noscript>
+
   <!-- JavaScript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
