Move all models into their own files

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,11 @@
   <script src="js/mylibs/map.js"></script>
   <script src="js/mylibs/map.contextmenu.js"></script>
   <script src="js/mylibs/models.js"></script>
+  <script src="js/mylibs/models/mark.js"></script>
+  <script src="js/mylibs/models/marklist.js"></script>
+  <script src="js/mylibs/models/pointconstraint.js"></script>
+  <script src="js/mylibs/models/user.js"></script>
+  <script src="js/mylibs/models/serverinfo.js"></script>
   <script src="js/mylibs/nominatim.js"></script>
   <script src="js/mylibs/views.js"></script>
   <script src="js/mylibs/router.js"></script>
