Move most views into seperate files

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
   <script src="js/mylibs/i18n.js"></script>
   <script src="js/mylibs/templates.js"></script>
   <script src="js/mylibs/api.js"></script>
+  <script src="js/mylibs/nominatim.js"></script>
   <script src="js/mylibs/map.js"></script>
   <script src="js/mylibs/map.contextmenu.js"></script>
   <script src="js/mylibs/models.js"></script>
@@ -61,7 +62,18 @@
   <script src="js/mylibs/models/pointconstraint.js"></script>
   <script src="js/mylibs/models/user.js"></script>
   <script src="js/mylibs/models/serverinfo.js"></script>
-  <script src="js/mylibs/nominatim.js"></script>
+  <script src="js/mylibs/views/admin.js"></script>
+  <script src="js/mylibs/views/billing.js"></script>
+  <script src="js/mylibs/views/data.js"></script>
+  <script src="js/mylibs/views/imexport.js"></script>
+  <script src="js/mylibs/views/login.js"></script>
+  <script src="js/mylibs/views/map.js"></script>
+  <script src="js/mylibs/views/mark.js"></script>
+  <script src="js/mylibs/views/register.js"></script>
+  <script src="js/mylibs/views/sidebar.js"></script>
+  <script src="js/mylibs/views/topbar.js"></script>
+  <script src="js/mylibs/views/user.js"></script>
+  <script src="js/mylibs/views/userdialog.js"></script>
   <script src="js/mylibs/views.js"></script>
   <script src="js/mylibs/router.js"></script>
   <script src="js/script.js"></script>
