added algview for choosing algorithms and to set their constraints. removed old algorithm chooser. added some constraints to mockapi.

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
   <script src="js/mylibs/views/mark.js"></script>
   <script src="js/mylibs/views/register.js"></script>
   <script src="js/mylibs/views/sidebar.js"></script>
+  <script src="js/mylibs/views/algview.js"></script>
   <script src="js/mylibs/views/topbar.js"></script>
   <script src="js/mylibs/views/user.js"></script>
   <script src="js/mylibs/views/userdialog.js"></script>
