updated translation file

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
   <script src="js/libs/backbone.js"></script>
   <script src="js/libs/jquery.validate.min.js"></script>
   <script src="js/libs/jquery.tablesorter.min.js"></script>
+  <script src="js/libs/jquery.corner.js"></script>
   <script src="js/libs/handlebars-1.0.0.beta.4.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
