--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/tipsy.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
