Add Routeinfo overlay and update translation files

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,7 @@
   <script src="js/mylibs/views/topbar.js"></script>
   <script src="js/mylibs/views/user.js"></script>
   <script src="js/mylibs/views/userdialog.js"></script>
+  <script src="js/mylibs/views/route.js"></script>
   <script src="js/mylibs/views.js"></script>
   <script src="js/mylibs/router.js"></script>
   <script src="js/script.js"></script>
