--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
   <script src="js/libs/jquery-ui-1.8.18.custom.min.js"></script>
+  <script src="js/libs/ui.spinner.js"></script>
   <script src="js/libs/OpenLayers.js"></script>
   <script src="js/libs/underscore.js"></script>
   <script src="js/libs/backbone.js"></script>
