fix mockapi, so tests will pass

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -13,6 +13,7 @@
   <script src="../js/libs/underscore.js"></script>
   <script src="../js/libs/backbone.js"></script>
   <script src="../js/plugins.js"></script>
+  <script src="../js/mylibs/i18n.js"></script>
   <script src="../js/mylibs/api.js"></script>
   <script src="../js/mylibs/nominatim.js"></script>
 
