Add About dialog to the webclient. Needs content.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <script src="js/mylibs/models/pointconstraint.js"></script>
   <script src="js/mylibs/models/user.js"></script>
   <script src="js/mylibs/models/serverinfo.js"></script>
+  <script src="js/mylibs/views/about.js"></script>
   <script src="js/mylibs/views/admin.js"></script>
   <script src="js/mylibs/views/billing.js"></script>
   <script src="js/mylibs/views/data.js"></script>
