--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css" />
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css" />
   <![endif]-->
@@ -47,7 +47,7 @@
   <script src="js/libs/backbone.js"></script>
   <script src="js/libs/jquery.validate.min.js"></script>
   <script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
-  <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
+  <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
   <script src="test/qunit/jquery.mockjax.js"></script>
