--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <script src="js/libs/underscore.js"></script>
   <script src="js/libs/backbone.js"></script>
   <script src="js/libs/jquery.validate.min.js"></script>
-  <script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
+  <script src="js/libs/handlebars-1.0.rc.1.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
